# Amira_panRG_pipeline

./: .gitignore  E_coli_config.yaml  README.md  Snakefile  pyproject.toml
Escherichia_coli_panRG/: AMR_calls.json  AMR_headers.txt  junk_alleles.txt  poppunk_input.txt
data/reference_genes/ariba_downloads/: ncbi.tsv
envs/: bakta.yaml  panaroo.yaml  poppunk.yaml
software/: convert_fasta_to_gff.py
