[tool.poetry]
name = "Amira_panRG_pipeline"
version = "0.0.0"
description = "Amira_panRG_pipeline"
authors = ["Daniel Anderson <dander@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Danderson123/Amira_panRG_pipeline"
repository = "https://github.com/Danderson123/Amira_panRG_pipeline"
packages = []
keywords = ["AMR Prediction", "Genotyping", "Sequence Assembly"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pysam = "0.22.0"
tqdm = "4.64.1"
snakemake = "7.32.4"
biopython = "1.79"
pyfastaq = "3.17.0"
pulp = "2.7.0"
pandas = "2.2.2"
make_prg = "0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"